# ai-project-boilerplate

./: .dockerignore  .env.example  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/api/: main.py
app/api/routers/: chat.py
app/api/schemas/: chat.py
app/ui/: app.py
src/: config.py
src/agents/: langgraph_agent.py
src/engines/: chat_service.py  llm_provider.py  llm_router.py
src/llm/: chatgpt.py  claude.py  kt_agent_builder.py  local.py
